crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__split_on_empty_string.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--loop=threaded"
    - crabbing-interpreters/tests/cases/split_on_empty_string.lox
---
success: true
exit_code: 0
----- stdout -----
2
ä
===============
6
🐍
===============
7
b
===============
10
ᗢ
===============
11
c
===============

----- stderr -----
