crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__split_string_on_spaces.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--loop=threaded"
    - crabbing-interpreters/tests/cases/split_string_on_spaces.lox
---
success: true
exit_code: 0
----- stdout -----
6
split
===============
11
this
===============
18
string
===============
21
on
===============
27
spaces
===============

----- stderr -----
