crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__test_nan_slow_path.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/test_nan_slow_path.lox
---
success: true
exit_code: 0
----- stdout -----
NaN
NaN
NaN
NaN
NaN
false
false
false
false
false
true

----- stderr -----
