crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__unexpected_eof.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/unexpected_eof.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Unexpected end of file
   ╭─[crabbing-interpreters/tests/cases/unexpected_eof.lox:1:10]
   │
 1 │ print 42
   │          │ 
   │          ╰─ end of file here
───╯
